# link-to-remarkable

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
scripts/: package-lock.json  package.json  rm-register.mjs  rm-upload.mjs
src/link2rm/: __init__.py  cli.py  config.py  epub_render.py  extractor.py  llm_cleanup.py  logger.py  pdf_render.py  pipeline.py  remarkable.py  server.py
src/link2rm/handlers/: __init__.py  arxiv.py  base.py  medium.py  substack.py  x.py
tests/: conftest.py  test_extractor.py  test_handlers.py  test_integration.py
tests/fixtures/: arxiv_api.xml  medium_rss.xml  news_article.html  paulgraham_essay.html  substack_post.json
