[project]
name = "link2rm"
version = "0.1.0"
description = "Send any URL to your reMarkable tablet as a clean PDF"
requires-python = ">=3.11"
dependencies = [
    "trafilatura>=1.9",
    "readability-lxml>=0.8",
    "weasyprint>=62",
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
    "click>=8.1",
    "feedparser>=6.0",
    "lxml>=5.2",
    "beautifulsoup4>=4.12",
    "python-slugify>=8.0",
    "ebooklib>=0.20",
]

[project.optional-dependencies]
playwright = ["playwright>=1.44"]
llm = ["anthropic>=0.28"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=5.0",
]

[project.scripts]
link2rm = "link2rm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/link2rm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires network access (deselect with -m 'not integration')"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=5.0",
]
